# eim

./: .cproject  .project  CMakeLists.txt  Demand.cpp  Demand.h  Entity.cpp  Entity.h  README.md  Supply.cpp  eim.py  main.cpp  matching.h  out.json
archive/: matching.cpp  matching.h
market_v0/: market.cpp  matching.cpp  supply.cpp  supply.h  treatment.cpp  treatment.h
src/: demand.cpp  demand.h  entity.cpp  json.cpp  json.h  main.cpp  main.h  market.cpp  market.h  matching.cpp  matching.h  omega.cpp  omega.h  supply.cpp  supply.h  tests.cpp  tests.h  utils.cpp  utils.h
src/market/: demand.cpp  demand.h  entity.cpp  entity.h  market.cpp  market.h  matching.cpp  matching.h  params.h  supply.cpp  supply.h  treatment.cpp  treatment.h  value.cpp  value.h
src/market_v0/: demand.cpp  demand.h  market.h  matching.h  params.h  value.cpp  value.h
src/utils/: d_gen.cpp  d_gen.h  for.h  omega.cpp  omega.h  omega1.cpp  omega1.h  plot.cpp  plot.h  vector.h  vector.tpp
src/utils_v0/: plot.cpp  plot.h
utils_v0/: for.h  omega.cpp  omega.h
